--- a/package.json
+++ b/package.json
@@ -1,23 +1,28 @@
 {
+  "$schema": "https://json.schemastore.org/package.json",
   "name": "little-lemon-app",
   "version": "1.0.0",
+  "homepage": "https://aydan-a.github.io/LittleLemon",
   "private": true,
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.27.0",
-    "react-icons": "^5.2.1"
+    "react-icons": "^5.2.1",
+    "react-router-dom": "^6.27.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.4.6",
     "@testing-library/react": "^14.2.2",
     "@testing-library/user-event": "^14.5.2",
+    "gh-pages": "^6.3.0",
     "react-scripts": "5.0.1"
   },
   "browserslist": {
